--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@alphardex/aqua.css": "^1.1.1",
     "@zeit-ui/vue": "^2.4.0",
     "@zeit-ui/vue-icons": "^3.0.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
